--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -1,17 +1,28 @@
 @media screen and (max-width: 900px) {
   main {
-    padding: 20vh 0vh 0vh 0vh;
+    padding: 180px 0vh 0vh 0vh;
   }
   .header-nav .social {
     transform: scale(0.7);
   }
 
+  .header-nav .img-container {
+    max-width: 400px;
+    height: 50px;
+    padding: 0;
+  }
+
   .header-nav {
+    width: 100%;
     position: fixed;
     z-index: 1000;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    min-height: 150px;
     height: 20vh;
     padding: 1rem;
   }
@@ -23,7 +34,7 @@
 
   /* Hero */
   .hero {
-    height: 100vh;
+    height: 80vh;
   }
 
   /* About */
