--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -389,6 +389,21 @@ footer ul li {
   font-weight: 500;
 }
 
+.delete-button-container {
+  grid-row: 4 / span 1;
+  justify-items: center;
+  align-items: center;
+  border-radius: 0;
+  width: 50%;
+  margin: auto;
+}
+.delete-button-container .btn {
+  background: rgb(184, 2, 2);
+  padding: 10px;
+  z-index: 10;
+  /* border-radius: 5px; */
+}
+
 .categories {
   display: grid;
   grid-gap: 1rem;
