fixed mobile responsiveness bugs

--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 900px) {
   main {
-    padding: 180px 0vh 0vh 0vh;
+    padding: 150px 0vh 0vh 0vh;
   }
   .header-nav .social {
     transform: scale(0.7);
@@ -23,7 +23,7 @@
     justify-items: center;
     align-items: center;
     min-height: 150px;
-    height: 20vh;
+    height: 150px;
     padding: 1rem;
   }
 
@@ -34,7 +34,12 @@
 
   /* Hero */
   .hero {
-    height: 80vh;
+    min-height: 80vh;
+  }
+
+  .hero .container {
+    padding: 100px 0px;
+    height: 100%;
   }
 
   /* About */
@@ -42,6 +47,9 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0px;
   }
 
   /* articles */
@@ -78,6 +86,9 @@
 
   /* footer */
 
+  footer {
+    width: 100%;
+  }
   footer .container > * {
     border: rgba(223, 223, 223, 0.2) 1px solid;
     padding: 1rem;
