--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -105,8 +105,8 @@ textarea {
 /* Utilities */
 
 .container {
-  max-width: var(--max-width);
   width: 1100px;
+  max-width: var(--max-width);
   margin: auto;
 }
 
@@ -161,7 +161,6 @@ textarea {
   border-radius: 40px;
   text-align: center;
   color: var(--light-color);
-  height: 100%;
 }
 
 .card {
@@ -273,7 +272,7 @@ textarea {
   color: var(--light-color);
   display: grid;
   grid-template-columns: 100%;
-  height: 58vh;
+  min-height: 58vh;
   grid-template-rows: 1fr;
   justify-items: start;
   align-items: center;
@@ -283,6 +282,7 @@ textarea {
   display: grid;
   gap: 3vh;
   justify-items: start;
+  align-items: start;
 }
 
 .hero .container * {
@@ -383,8 +383,7 @@ footer ul li {
 }
 
 .article-grid .content label {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   font-size: 1.2rem;
   font-weight: 500;
 }
@@ -431,12 +430,18 @@ input[type="radio"] {
   justify-self: center;
   text-align: center;
   align-self: center;
-  transform: scale(1.1);
+  margin: 10px 0px;
+  transform: scale(1.2);
+}
+
+/* single article */
+#body * {
+  margin: 1rem;
 }
 
 /* new article with Javascript for Homepage*/
 
-/* copy articles page */
+/* copy of articles page */
 .articles-container-2 {
   display: grid;
   /* background: white; */
@@ -501,5 +506,18 @@ input[type="radio"] {
     flex-direction: column;
     align-items: start;
     justify-content: space-around;
+  }
+}
+
+@media screen and (max-width: 1270px) {
+  .article-grid .content .choose-category,
+  .article-grid .content .choose-category .radio-buttons {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .article-grid .choose-category label {
+    width: 100%;
+    grid-template-columns: 1fr 1fr;
   }
 }
